assets/css/style.css
/* Import Google fonts */
@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@400;700&family=Stick&display=swap');

/* Wildcard styles */
* {
    margin: 0;
    padding: 0;
}


/* General Styles */
body {
    margin: 0%;
    font-family: Alegreya Sans, sans-serif;
}

header a, i {
    text-decoration: none;
}

#header-dark {
    /* Push h1 content down */
    padding: 20px 0 0 0;
    /* Make h1 and nav bar readable against bkg image */
     background: linear-gradient(180deg, black, transparent);
     max-height: 25vh;
     /* Ensures no white space appears at top due to first element's margin */
     overflow: hidden;

}

#navbar {
    display: flex;
    justify-content: space-evenly;
    /* Solves issue of nav bar being off-centre */
    padding: 10px 20px;
    margin: 5px 0px 5px 0px;
    text-transform: uppercase;
    font-size: 18px;
}

.active {
    text-decoration: underline;
}

h1 {
    text-align: center;
    margin: 5px 15px;
    padding: 5px 0px;
    text-shadow: -6px 5px 4px black;
}

h2 {
    text-align: center;
    margin: 20px 20px 10px;
}

header h1, header a {
    color: azure;
}

h3 {
    margin: 5px 1rem;
}

p {
    margin: 0.5rem 1rem;
    text-align: justify;
}

header {
    position: fixed;
}

ul li {
    list-style-type: none;

}

/* Index Page */
#hero {
    position: relative;
    background: url("../images/beehive-fence.jpg") no-repeat center center/cover;
    width: 100%;
    min-height: 33vh;
}

main {
    margin-top: 10px;
}

main section {
    margin: 0.5rem 1rem;
}

#about-us div{
    display: flex;
    flex-direction: column;
    align-items: center;
}

.main-images {
    border-radius: 2%;
    width: 90%;
    margin: 10px;
}

hr {
    width: 90%;
    margin: auto;
}

.invite {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.invite a {
    text-align: center;
}

.invitation-images {
    width:75%;
    border-radius: 2%;

}

.paragraph-images{
    border-radius: 2%;
    width: 100%;
}

/*Courses Page */
.course-boxes {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#courses ul {
    margin: 0.5rem 0;
    border: 1px solid black;
    border-radius: 15px;
    width: 70vw;
    padding: 5px 15px;
}

.sold {
    color: crimson;
    font-weight: bold;
}

li a {
    text-decoration: none;
    
}

.available {
    color: forestgreen;
    text-decoration: underline;
    font-weight: bold;
}

#sign-up-button {
    text-align: center;
    margin: 20px;
}

#sign-up-button a {
    display: block; /*Ensure buttons displays correctly on very narrow width devices */
    text-align: center;
    text-decoration: none;
    color: black;
    font-weight: bold;
    background-color: rgba(225,225,0,.8);
    border: 1px solid black;
    width: fit-content; /* Shrinks the border to the width of the text regardless of font-size */
    padding: 8px 15px;
    border-radius: 10px 10px;
    margin: 10px auto; /* Centers the p inside the div in conjunction with the div's text-align property*/
}

/* Shop Page */
#shop {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#shop div {
    margin: 1rem 0rem;
}

.products {
    border: 1px solid black;
    max-width: 300px;
    border-radius: 10px;
    /* Flexbox to push images right down to the bottom of each div */
    display: flex;
    flex-direction: column;
}

#shop h3 {
    text-align: center;
}

#shop li {
    list-style-type: circle;
}

.shop-img {
    width: 100%;
    margin-top: 10px;
    border-radius: 0px 0px 10px 10px;
    box-shadow: 0px -2px 6px black;
}

.bold {
    font-weight: bold;
}

.emphasise {
    font-size: larger;
}

/* Form Page */
#registration {
    display: flex;
    flex-direction: column;
    align-items: center;
}

form {
    display: flex;
    flex-direction: column;
    margin: 0rem 2rem;
}

.details-boxes {
    margin: 10px auto;
    width: 70vw;
}

.courses-radio input {
    width: auto;
}

form div {
    margin: auto;
}

input {
    width: 70vw;
    max-width: 300px;
    margin-bottom: 10px;
}

#register-button {
    margin: 20px 10px;
    height: 40px;    
}

/* Footer Style */
footer {
    background-color: rgba(0, 0, 0, 0.8);
}

footer > ul {    
    font-size: 150%;
    display: flex;
    justify-content: space-evenly;
    margin-bottom: 0;
    padding: 1rem;
}

footer i {
    color: azure;
}

/* Media query for tablets and larger: >= 768px */
@media screen and (min-width: 768px) {
    #hero {
        min-height: 25vh;
    }

    #navbar {
        font-size: 18px;
        margin: 10px;
    }

    .main-images {
        width: 50%;
    }

    #short-descriptions {
        display: flex;
    }

    .invite {
        align-items: center;
        width: 50vw;
        margin: 0px 15px;
    }

    .invite > a {
        text-align: center;
    }

    .invitation-images {
        width: 80%;
        padding: 15px;
        border-radius: 10%;
    }

}

/* Media query for Laptops and larger: >= 1200px */
@media screen and (min-width: 1200px) {
    #hero {
        background-position: center;
    }
    

    main section {
        margin: 1rem 10vw;
    }

    #about-us div{
        display: flex;
        flex-direction: row;
        align-items: center;

    }

    #about-us p {
        flex-grow: 2;
    }

    #about-us img {
        width: 40%;
        margin: 1rem;
    }

    .mobile {
        display: none;
    }
}

